--- a/splash.html
+++ b/splash.html
@@ -20,15 +20,17 @@
         width: 100%;
         height: 100%;
         margin: 0;
-        background: transparent;
+        background: rgb(23, 26, 28);
+        color: rgb(205, 215, 225);
       }
       .loading {
-        border: 6px solid #f3f3f3; /* Light grey */
+        border: 6px solid rgba(11, 107, 203, 0.2);
         border-top: 6px solid rgb(11, 107, 203); /* Blue */
         border-radius: 50%;
         width: 40px;
         height: 40px;
         animation: spin 1s linear infinite;
+        will-change: transform;
       }
 
       @keyframes spin {
