Rebrand to CrossCode!

--- a/splash.html
+++ b/splash.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YCode (Loading)</title>
+    <title>CrossCode (Loading)</title>
     <style>
       .splash {
         width: 100%;
@@ -47,7 +47,7 @@
   <body>
     <div class="splash">
       <div class="loading"></div>
-      Loading YCode...
+      Loading CrossCode...
     </div>
   </body>
 </html>
